Fix spacing issue on header and body

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 header {
     background-color: antiquewhite;
 }
@@ -8,4 +12,8 @@ main {
 
 footer {
     background-color: grey;
+}
+
+ul {
+    margin: 0;
 }
